--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
+    "node-fetch": "^2.6.1",
     "owlbot-js": "^2.0.2"
   },
   "devDependencies": {
