--- a/config/dev.env
+++ b/config/dev.env
@@ -1,6 +1,6 @@
-PORT=5000
+PORT=8000
 DB_PASS=dCmDG03MOTeqIIOm
-DB_URL=mongodb+srv://admin:dCmDG03MOTeqIIOm@cluster0.pf3xf.mongodb.net/local-db?retryWrites=true&w=majority
+DB_URL=mongodb+srv://wordbook-admin:sI5geXbyrBmqFCQS@cluster0.sykjo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_KEY=lskjdflskdfjlsdjf
 PIXABAY_API_KEY=19959241-08142c55e58764b224fc62886
 OWLBOT_TOKEN=4f7e9118703f408487fc318a3d9b01f2f43339d1
