--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server",
-    "dev": "env-cmd -f config/dev.env nodemon src/server"
+    "dev": "env-cmd -f config/dev.env nodemon src/server",
+    "deploy": "vercel --prod"
   },
   "keywords": [],
   "author": "",
